# xuanqi_axum

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf
.cargo/: config.toml
src/: main.rs  middleware.rs  states.rs
src/database/: database.rs  mod.rs
src/entities/: mod.rs
src/model/: database.rs  mod.rs  ra.rs
src/web_service/: authentication.rs  index.rs  item_operation.rs  mod.rs
src/web_service/authentication/: auth.rs  mod.rs
src/web_service/clipboard/: mod.rs
src/web_service/storage_management/: mod.rs
templates/: index.html  广告代码.html
templates/GPT续写/: index.html
templates/SharedEditingProposal/: 共享编辑proposal.html
templates/aligner/: aligner.html
templates/仓储管理/: index-viewOnly.html  index.html  index.min.html  s.js  s.min.js
templates/仓储管理/旧html/: index copy.html  index.min.deprecated.html
templates/佳辞谱/: about-oldindex.html  about.html  account-info.html  fee.html  index-bug.html  index.html  method.html  notes.html  pop-science-words.html  usage.html  广告代码.html
templates/剪贴板管理/: index.html
templates/文法注疏/: about.html  account-info.html  fee.html  index.html  index_failed.html  method.html  notes.html  pop-science-syntax.html  usage.html  广告代码.html
templates/网站管理/: index.html
templates/逐字词列表查询/: index.html
