[package]
name = "xuanqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.3.2"
actix-files = "0.5.0"
mongodb = "2.2.1"
tokio = "1.18.2"
tokio-stream = " 0.1.8"
futures = "0.3.21"
actix-cors = "0.6.1"
actix-identity = "0.4.0"
actix-session = { version = "0.6.2", features = ["redis-rs-session"] }

[dev-dependencies]
tokio-test = "0.4.2"