[package]
name = "xuanqi_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
# actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.3.2"
# actix-files = "0.5.0"
mongodb = "2.0"
tokio-stream = " 0.1.8"
futures = "0.3.21"
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
# actix-cors = "0.6.1"
# actix-identity = "0.4.0"
# actix-session = { version = "0.6.2", features = ["redis-rs-session"] }

# [dev-dependencies]
# tokio-test = "0.4.2"